--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,25 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  --primary: hsl(25, 100%, 94%);
+  --secondary: hsl(26, 100%, 55%);
+/*  */
+  --black: hsl(0, 0%, 0%);
+  --dark-gray: hsl(220, 13%, 13%);
+  --gray: hsl(219, 9%, 45%);
+  --light-gray: hsl(220, 14%, 75%);
 }
